--- a/DEW/UT04-01/index.html
+++ b/DEW/UT04-01/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>UT04-01</h1>
-    <input type="tel">
+    <input type="tel" name="" id="">
+    <!-- Esto dijo que se supone que cuando 
+    vas a introducir dsatos aparece un teclato en el telefono -->
+    <input type="time" name="" id="">
+
 </body>
 </html>
