--- a/DEW/UT04-01/index.html
+++ b/DEW/UT04-01/index.html
@@ -11,6 +11,6 @@
     <!-- Esto dijo que se supone que cuando 
     vas a introducir dsatos aparece un teclato en el telefono -->
     <input type="time" name="" id="">
-
+    <input type="date" name="" id="">
 </body>
 </html>
