--- a/DEW/UT04-01/index.html
+++ b/DEW/UT04-01/index.html
@@ -7,10 +7,9 @@
 </head>
 <body>
     <h1>UT04-01</h1>
-    <input type="tel" name="" id="">
-    <!-- Esto dijo que se supone que cuando 
-    vas a introducir dsatos aparece un teclato en el telefono -->
-    <input type="time" name="" id="">
-    <input type="date" name="" id="">
+    <form action="http://www.w3school.com/action_page.php">
+    <input type="tel" name="telefono" id="">
+        <input type="submit" value="Enviar a W3school">
+    </form>
 </body>
 </html>
