--- a/DEW/UT04-01/index.html
+++ b/DEW/UT04-01/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>UT04-01</h1>
-    <form action="http://www.w3school.com/action_page.php">
+    <form action="https://www.w3schools.com/action_page.php">
     <input type="tel" name="telefono" id="">
         <input type="submit" value="Enviar a W3school">
     </form>
