--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iewawa</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        h1 {
+            color: #333;
+            background-color: #ffdcf0;
+            padding: 20px;
+            /* border-radius: 10px; */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        a {
+            margin-top: 20px;
+            text-decoration: none;
+            color: #fff;
+            background-color: #86a6f3;
+            padding: 10px 20px;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s ease;
+        }
+        a:hover {
+            background-color: #627ebe;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hola! Estás en la página de iewawa :></h1>
+        <h1>Hola!! Estás en la página de iewawa  ʕᵔᴥᵔ ʔ </h1>
+    <a href="DEW/UT04-01">Ir a DEW/UT04-01</a>
 </body>
 </html>
