--- a/DEW/UT04-01/index.html
+++ b/DEW/UT04-01/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>UT04-01</h1>
-    <form action="https://www.w3schools.com/action_page.php" method="post" id="formulario" novalidate>
+    <form action="https://www.w3schools.com/action_page.php" method="POST" id="formulario" novalidate>
+        <!-- action="https://www.w3schools.com/action_page.php" -->
 
         <fieldset>
             <legend>Datos Usuario</legend>
