Correciones en clase del JS, del array de aficiones

--- a/DEW/UT04-01-PRUEBAS/index.html
+++ b/DEW/UT04-01-PRUEBAS/index.html
@@ -44,7 +44,7 @@
                 <option value="dni">DNI</option>
                 <option value="nie">NIE</option>
             </select>
-            <input type="text" id="dni" name="dni" placeholder="DNI/NIE" pattern="([XYZxyz][0-9]{7}[A-Za-z]|[0-9]{8}[A-Za-z])" required>
+            <input type="text" id="dni-nie" name="dni" placeholder="DNI/NIE" pattern="([XYZxyz][0-9]{7}[A-Za-z]|[0-9]{8}[A-Za-z])" required>
 
 
             <label>Crear cuenta como:</label>
@@ -61,17 +61,17 @@
 
             <div class="aficion-check">
                 <label>Elige tus aficiones:</label>
-                <input type="checkbox"  id="musica" name="musica" value="musica">
+                <input type="checkbox"  id="musica"  value="musica">
                 <label for="musica">Música</label>
-                <input type="checkbox"  id="manualidades" name="manualidades" value="manualidades">
+                <input type="checkbox"  id="manualidades"  value="manualidades">
                 <label for="manualidades">Manualidades</label>
-                <input type="checkbox" id="deportes" name="deportes" value="deportes">
+                <input type="checkbox" id="deportes"  value="deportes">
                 <label for="deportes">Deportes</label>
-                <input type="checkbox"  id="artes" name="artes" value="artes">
+                <input type="checkbox"  id="artes"  value="artes">
                 <label for="artes">Artes</label>
-                <input type="checkbox"  id="videojuegos" name="videojuegos" value="videojuegos">
+                <input type="checkbox"  id="videojuegos" value="videojuegos">
                 <label for="videojuegos">Videojuegos</label>
-                <input type="checkbox"  id="lectura" name="lectura" value="lectura">
+                <input type="checkbox"  id="lectura"  value="lectura">
                 <label for="lectura">Lectura</label>
             </div>
         </fieldset>
