--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>iewawa</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #e6f7ff;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -17,23 +17,24 @@
         }
         h1 {
             color: #333;
-            background-color: #ffdcf0;
+            background-color: #ffebf0;
             padding: 20px;
-            /* border-radius: 10px; */
+            border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         a {
             margin-top: 20px;
             text-decoration: none;
             color: #fff;
-            background-color: #86a6f3;
+            background-color: #4a90e2;
             padding: 10px 20px;
             border-radius: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
         a:hover {
-            background-color: #627ebe;
+            background-color: #357ab8;
+            transform: translateY(-2px);
         }
     </style>
 </head>
