--- a/DEW/UT04-01/index.html
+++ b/DEW/UT04-01/index.html
@@ -1,4 +1,4 @@
-s<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@ s<!DOCTYPE html>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>UT04-01</h1>
+    <h1>Formulario UT04-01</h1>
     <form action="https://www.w3schools.com/action_page.php" method="post" id="formulario" novalidate>
 
         <fieldset>
